# graph-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  LATEST_RESULTS.md  README.md  docker-compose.yml  pyproject.toml
graph_bench/: __init__.py  config.py  protocols.py  types.py
graph_bench/adapters/: __init__.py  arangodb.py  base.py  duckdb.py  falkordb.py  grafeo.py  ladybug.py  memgraph.py  nebula.py  neo4j.py  tugraph.py
graph_bench/benchmarks/: __init__.py  algorithms.py  base.py  concurrent.py  graphanalytics.py  hybrid.py  ldbc_acid.py  pattern.py  query.py  snb_interactive.py  storage.py  structure.py  traversal.py  vector.py  write.py
graph_bench/cli/: __init__.py  main.py
graph_bench/datasets/: __init__.py  base.py  ldbc_snb.py  lubm.py  pokec.py  synthetic.py
graph_bench/reporting/: __init__.py  collector.py  formats.py  template.py
graph_bench/runner/: __init__.py  orchestrator.py  timing.py
graph_bench/utils/: __init__.py  memory.py
scripts/: run_small_tests.py  test_connections.py
tests/: conftest.py  test_adapters.py  test_benchmarks.py  test_config.py  test_datasets.py  test_reporting.py  test_runner.py  test_types.py
tests/adapters/: test_duckdb.py
